Refactor some classes as a PathValidator etc